# xsmp-modeler-core

./: .gitignore  .project  .readthedocs.yaml  CONTRIBUTING.md  QUALITY_GUIDELINES.md  README.md  SECURITY.md  build.gradle  formatter-java-eclipse.xml  pom.xml  settings.gradle  xsmp
.github/: dependabot.yml
.launch/: Launch Runtime Eclipse.launch
com.thalesaleniaspace.compilechain/: .project  plugin.xml  pom.xml
doc/: grammar.md  project_creation.md
docs/: requirements.txt
org.eclipse.xsmp.cli/: .project  pom.xml
org.eclipse.xsmp.cli.tests/: .classpath  .project  pom.xml
org.eclipse.xsmp.design/: .project  build.properties  plugin.properties  plugin.xml  pom.xml
org.eclipse.xsmp.feature/: .project  feature.xml  pom.xml
org.eclipse.xsmp.forms/: .project  build.properties  plugin.properties  plugin.xml  pom.xml
org.eclipse.xsmp.generator.cpp/: build.gradle  build.properties  plugin.properties  pom.xml
org.eclipse.xsmp.ide/: .classpath  .project  build.gradle  build.properties  pom.xml
org.eclipse.xsmp.ide.tests/: .project  pom.xml
org.eclipse.xsmp.lib/: .classpath  .project  build.properties  pom.xml
org.eclipse.xsmp.profile.esa-cdk-legacy/: build.gradle  pom.xml
org.eclipse.xsmp.profile.esa-cdk-legacy.feature/: feature.xml  pom.xml
org.eclipse.xsmp.profile.esa-cdk-legacy.ide/: build.gradle  pom.xml
org.eclipse.xsmp.profile.esa-cdk-legacy.ui/: pom.xml
org.eclipse.xsmp.profile.xsmp-sdk.tests/: CMakeLists.txt  build.properties  pom.xml
org.eclipse.xsmp.profile.xsmp-sdk.tests/python/xsmp_sdk_tests/: test_xsmp_sdk_tests.py
org.eclipse.xsmp.profile.xsmp-sdk.tests/src/Test/: M1.cpp  M1.h
(+1739 files in other folders)
